--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,19 @@ video {
     border: 0;
 }
 
+html { 
+    background: url(../images/bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
 body {
     display: grid;
     height: 98vh;
     grid-template-rows: 1fr auto;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: var(--backgroundColor);
 }
 
 main {
