--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,14 @@ main {
 
 .box {
     flex: 1 1 292px;
-    max-width: 400px;
+    max-width: 440px;
     padding: 20px;
+}
+
+.boxBackground {
+  background-color: var(--backgroundColor);
+  border-radius: 36px;
+  padding: 40px;
 }
 
 .headerImage {
@@ -77,7 +83,7 @@ footer {
 
 p {
     margin: 0 0 1em 0;
-    font-weight: 500;
+    font-weight: 400;
     color: var(--textColor);
 }
 
